# bbcp

./: BUILDING.md  CMakeLists.txt  MakeSname  README.md  RELEASE-NOTES.md  build-deb.sh  build.sh
.github/workflows/: build.yml  release.yml
debian/: README.Debian  changelog  control  copyright  install  rules
src/: Makefile  bbcp_Config.C
